0.9.1
-----
- Makefile: fix "make dist" tarball generation
- pmount: use async by default to not destroy flash memory

0.9
---
- pmount-hal: ported to new hal 0.5 and dbus 0.32 API
- integrate cryptsetup (with LUKS extension) if device is encrypted
  with dmcrypt and LUKS metadata
- pmount: mount vfat with shortname=winnt option
- pmount-hal: use volume.policy.mount_filesystem instead of
  volume.fstype
- always build the POT file, delete it on "make clean"
- Makefile: added "dist" target

0.8
---
- unbreak locking, this created ".created_by_pmount" stamps in the
  locking directories
- accept pumount by label name
- accept pmount by mount path (only in /media)
- added --umask option
- renamed template.pot to pmount.pot to match translation domain
- support a whitelist in /etc/pmount.allow

0.7.2
-----
- updated translations from Rosetta: ca, es_ES
- added new translations from Rosetta: cs, es, fr, hr, it_IT, nb

0.7.1
-----
- pmount-hal: consider a directory empty if it only contains a
  .created-by-pmount file; this makes it work with unmounting using
  umount instead of pumount

0.7
---
- support --exec/-e option
- rewrote pmount-hal in C, now it runs 10 times faster

0.6
---
- pmount-hal: use hal-supplied file system type (if present) to speed up
  mounting and to avoid bogus error messages in kernel log
- mount vfat with 'quiet' option
- support pmount/pumount'ing mount points
- added Catalan translation, thanks to Eduard Duran
- added Spanish translation, thanks to Gustavo de Lama and Jorge
  González González

0.5.1
-----
- pmount: do not allow empty media labels; this allowed to mount a
  device directly under /media if /media was empty

0.5
---
- use stamp files to mark directories created by pmount and only
  remove a mount point directory if it contains a stamp file
- use the given device name as default mount point name instead of the
  symlink-resolved one
- i18n support
- added German translation

0.4.4
-----