@@ -1,3 +1,7 @@
+Development
+-----------
+- pmount-hal: ignore invalid file systems, autodetect in this case
+
 0.9.1
 -----
 - Makefile: fix "make dist" tarball generation
